--- a/requirements/main.in
+++ b/requirements/main.in
@@ -7,6 +7,7 @@ tensorboard
 transformers
 datasets
 evaluate
+bleurt @ git+https://github.com/google-research/bleurt.git
 alpaca-farm # Pre-trained, SFT, RLHF models
 torch
 numpy
