Add datasets, log dirs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 MUJOCO_LOG.TXT
 wandb
+output
 # Dataset files
 *.hdf5
+*.json
+# Direnv config
+.envrc
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
