Add major changes (#11)
* SFT baseline (#5)

* Update requirements

* Add SFT algorithm

* Add datasets, log dirs to gitignore

* Demonstrate how to configure dataset

* Update README

---------

Co-authored-by: aengusl <aenguslynch@gmail.com>
Co-authored-by: Daniel CH Tan <dtch1997@users.noreply.github.com>

* Daniel dev1 (#6)

* WIP simple train script

* Add full training pipeline

* Modify SFT dataset to return reference completions

* Add train_simple baseline

* Add BLEURT, ROUGE scores

* Add WandB logging

* Update README; make lr configurable

* Update requirements

* Enable SFT to be used with HF dataset

* Fix bug in lr scheduling

---------

Co-authored-by: Daniel CH Tan <dtch1997@users.noreply.github.com>

* Refactor out prompt formatting

* Fix bug

* Aengus dev2 (#10)

* WIP simple train script

* Add full training pipeline

* Modify SFT dataset to return reference completions

* Add train_simple baseline

* Add BLEURT, ROUGE scores

* Add WandB logging

* Update README; make lr configurable

* Update requirements

* Enable SFT to be used with HF dataset

* Fix bug in lr scheduling

* adding repe

* organising

* damn things not being easy

* works

* working but weirdly

---------

Co-authored-by: Daniel CH Tan <dtch1997@users.noreply.github.com>
Co-authored-by: Daniel Tan <25474937+dtch1997@users.noreply.github.com>

* Integrate repe pipeline (#12)

* Add AmbigPrompt datasets

* Inject project variables into script

* put prompts in another file

---------

Co-authored-by: Daniel CH Tan <dtch1997@users.noreply.github.com>
Co-authored-by: aengusl <aenguslynch@gmail.com>

---------

Co-authored-by: aengusl <aenguslynch@gmail.com>
Co-authored-by: Daniel CH Tan <dtch1997@users.noreply.github.com>
Co-authored-by: Aengus Lynch <37474130+aengusl@users.noreply.github.com>

--- a/requirements/main.in
+++ b/requirements/main.in
@@ -6,6 +6,9 @@ tensorboard
 # Experiment requirements
 transformers
 datasets
-alpaca-farm # Pre-trained, SFT, RLHF models
 torch
 numpy
+# Evaluate requirements
+evaluate
+rouge_score
+bleurt @ git+https://github.com/google-research/bleurt
