--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ build-backend = "hatchling.build"
 [project]
 name = "repepo"
 version = "0.1.0"
-authors = [{ name = "Daniel C.H. Tan", email = "dtch1997@users.noreply.github.com" }]
-classifiers = [
-  "Private :: Do Not Upload"
+authors = [
+  { name = "Daniel C.H. Tan", email = "dtch1997@users.noreply.github.com" },
 ]
+classifiers = ["Private :: Do Not Upload"]
 requires-python = ">=3.9"
 
 [tool.black]
@@ -35,9 +35,10 @@ select = [
   "I",
 ]
 exclude = ["third_party", ".venv"]
+ignore = ["F841", "E501", "E741", "I001"]
 
 [tool.ruff.extend-per-file-ignores]
-"__init__.py" = ["F401"]
+"__init__.py" = ["F401", "F403", "E402"]
 
 [tool.ruff.isort]
 known-first-party = ["cdax"]
