--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -5,6 +5,7 @@ ipykernel
 matplotlib
 seaborn
 ffmpeg
-pytest >=7.4.3,<8.0.0
-black >=23.11.0,<24.0.0
+pytest >=7.4.3
+black >=23.11.0
 ruff >=0.1.6,<1.0.0
+pyright >= 1.1.337
