--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ reportMissingImports = true
 reportMissingTypeStubs = false
 useLibraryCodeForTypes = true
 typeCheckingMode = "basic"
+reportPrivateImportUsage = "none"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
