--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
   { name = "Daniel C.H. Tan", email = "dtch1997@users.noreply.github.com" },
 ]
 classifiers = ["Private :: Do Not Upload"]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 
 [tool.black]
 line-length = 88
@@ -50,13 +50,13 @@ ban-relative-imports = "all"
 
 [tool.pyright]
 include = ["repepo"]
-exclude = ["**/node_modules", "**/__pycache__"]
+exclude = ["**/node_modules", "**/__pycache__", "repepo/repe"]
 
 reportMissingImports = true
 reportMissingTypeStubs = false
-
-pythonVersion = "3.9"
-pythonPlatform = "Linux"
+useLibraryCodeForTypes = true
+typeCheckingMode = "basic"
+reportPrivateImportUsage = "none"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
