--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,4 +33,6 @@ jobs:
         run: pdm run pre-commit run --all-files
 
       - name: Test
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: pdm run python -m pytest tests
