Switch to PDM managed; add pre-commit; run linters (#23)
* Switch to PDM managed; add pre-commit; run linters

* Update CI workflow

* Use PDM in ci workflow

* Fix tests

* Add device-aware testing

* adding snapshot test for test_pipeline

* remove trailing whitespace hook, black does this already

* try removing tensorboard to see if that makes things work?

* try explicitly adding ml-dtypes to dev deps, to see if that helps?

* ...trying to add wrapt explicitly now...

* undoing dep changes

* try adding explicit tensorflow dev dep

* try removing bleurt dep and tensorflow

* fixing CI caching

* use string for python version in CI

---------

Co-authored-by: Daniel CH Tan <dtch1997@users.noreply.github.com>
Co-authored-by: David Chanin <chanindav@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,21 +1,41 @@
-name: CI
-on: [push]
+name: "ci"
+on: # rebuild any PRs and main branch changes
+  pull_request:
+  push:
+    branches:
+      - main
+
+concurrency:
+  group: ${{ github.repository_owner }}-${{ github.repository }}-${{ github.ref }}
+  cancel-in-progress: true
+
+env:
+  FORCE_COLOR: "1"
+  PYTHONUNBUFFERED: "1"
+
 jobs:
-  lint_test_and_build:
+  test:
     runs-on: ubuntu-latest
-    env:
-      HF_TOKEN: ${{ secrets.HF_TOKEN }}
+    permissions:
+      contents: read
+      packages: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - name: Checkout (GitHub)
+        uses: actions/checkout@v4
+
+      - name: Setup PDM
+        uses: pdm-project/setup-pdm@v3
         with:
-          python-version: "3.11"
-          cache: "pip"
+          python-version: "3.10"
+          cache: true
+
       - name: Install dependencies
-        run: make update
-      - name: linting
-        run: make style
-      - name: type checking
-        run: make typecheck
-      - name: tests
-        run: make test
+        run: pdm install
+
+      - name: Lint
+        run: pdm run pre-commit run --all-files
+
+      - name: Test
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: pdm run python -m pytest tests
