--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,9 +16,15 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
+
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
+
     steps:
       - name: Checkout (GitHub)
         uses: actions/checkout@v4
@@ -26,7 +32,7 @@ jobs:
       - name: Setup PDM
         uses: pdm-project/setup-pdm@v3
         with:
-          python-version: "3.10"
+          python-version: ${{ matrix.python-version }}
           cache: true
 
       - name: Install dependencies
