--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,13 +26,16 @@ jobs:
         python-version: ["3.10", "3.11", "3.12"]
 
     steps:
-      - name: Checkout (GitHub)
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Setup PDM
-        uses: pdm-project/setup-pdm@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+
+      - name: Install PDM
+        run: python -m pip install pdm
 
       - name: Install dependencies
         run: pdm install
