--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install system dependencies
-        run: apt install libopenblas-dev
+        run: sudo apt install libopenblas-dev
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
