updating CI for 3.11, and adding pyright

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "scikit-learn>=1.3.2",
     "evaluate>=0.4.1",
     "rouge-score>=0.1.2",
+    "termcolor>=2.4.0",
 ]
 
 [tool.black]
