--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,19 +23,16 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Install system dependencies
-        run: sudo apt install libopenblas-dev
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+          cache: "pip"
 
       - name: Install PDM
         run: python -m pip install pdm
@@ -45,6 +42,9 @@ jobs:
 
       - name: Lint
         run: pdm run pre-commit run --all-files
+
+      - name: Type check
+        run: pdm run pyright
 
       - name: Test
         env:
