--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,24 +16,35 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
-    steps:
-      - name: Checkout (GitHub)
-        uses: actions/checkout@v4
 
-      - name: Setup PDM
-        uses: pdm-project/setup-pdm@v3
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"]
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
-          cache: true
+          python-version: ${{ matrix.python-version }}
+          cache: "pip"
+
+      - name: Install PDM
+        run: python -m pip install pdm
 
       - name: Install dependencies
         run: pdm install
 
       - name: Lint
         run: pdm run pre-commit run --all-files
+
+      - name: Type check
+        run: pdm run pyright
 
       - name: Test
         env:
