--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
   { name = "Daniel C.H. Tan", email = "dtch1997@users.noreply.github.com" },
 ]
 classifiers = ["Private :: Do Not Upload"]
-requires-python = ">=3.9,<3.11"
+requires-python = ">=3.9,<4.0"
 dependencies = [
     "pyrallis>=0.3.1",
     "wandb>=0.16.0",
@@ -21,6 +21,7 @@ dependencies = [
     "scikit-learn>=1.3.2",
     "evaluate>=0.4.1",
     "rouge-score>=0.1.2",
+    "termcolor>=2.4.0",
 ]
 
 [tool.black]
