--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,17 +11,17 @@ authors = [
 classifiers = ["Private :: Do Not Upload"]
 requires-python = ">=3.9,<4.0"
 dependencies = [
-    "pyrallis>=0.3.1",
-    "wandb>=0.16.0",
-    "transformers>=4.35.2",
-    "torch>=2.1.1",
-    "datasets>=2.15.0",
-    "numpy>=1.26.2",
-    "accelerate>=0.24.1",
-    "scikit-learn>=1.3.2",
-    "evaluate>=0.4.1",
-    "rouge-score>=0.1.2",
-    "termcolor>=2.4.0",
+  "pyrallis>=0.3.1",
+  "wandb>=0.16.0",
+  "transformers>=4.35.2",
+  "torch>=2.1.1",
+  "datasets>=2.15.0",
+  "numpy>=1.26.2",
+  "accelerate>=0.24.1",
+  "scikit-learn>=1.3.2",
+  "evaluate>=0.4.1",
+  "rouge-score>=0.1.2",
+  "termcolor>=2.4.0",
 ]
 
 [tool.black]
@@ -67,6 +67,7 @@ exclude = ["**/node_modules", "**/__pycache__", "repepo/repe"]
 
 reportMissingImports = true
 reportMissingTypeStubs = false
+reportUnknownMemberType = false
 useLibraryCodeForTypes = true
 typeCheckingMode = "basic"
 reportPrivateImportUsage = "none"
@@ -77,16 +78,16 @@ testpaths = ["tests"]
 
 [tool.pdm.dev-dependencies]
 dev = [
-    "notebook>=7.0.6",
-    "ipykernel>=6.27.1",
-    "matplotlib>=3.8.2",
-    "seaborn>=0.13.0",
-    "ffmpeg>=1.4",
-    "pytest>=7.4.3",
-    "black>=23.11.0",
-    "ruff>=0.1.6",
-    "pyright>=1.1.338",
-    "jupyter>=1.0.0",
-    "pre-commit>=3.5.0",
-    "syrupy>=4.6.0",
+  "notebook>=7.0.6",
+  "ipykernel>=6.27.1",
+  "matplotlib>=3.8.2",
+  "seaborn>=0.13.0",
+  "ffmpeg>=1.4",
+  "pytest>=7.4.3",
+  "black>=23.11.0",
+  "ruff>=0.1.6",
+  "pyright>=1.1.338",
+  "jupyter>=1.0.0",
+  "pre-commit>=3.5.0",
+  "syrupy>=4.6.0",
 ]
