--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,8 @@ single-line-exclusions = ["typing"]
 ban-relative-imports = "all"
 
 [tool.pyright]
+venvPath = "."
+venv = ".venv"
 include = ["repepo"]
 exclude = ["**/node_modules", "**/__pycache__", "repepo/repe"]
 
@@ -89,4 +91,5 @@ dev = [
     "jupyter>=1.0.0",
     "pre-commit>=3.5.0",
     "syrupy>=4.6.0",
+    "pyright>=1.1.339",
 ]
