--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,12 @@ dependencies = [
     "torch>=2.1.1",
     "datasets>=2.15.0",
     "numpy>=1.26.2",
-    "accelerate>=0.24.1",
+    "accelerate>=0.26.1",
     "scikit-learn>=1.3.2",
     "evaluate>=0.4.1",
     "rouge-score>=0.1.2",
     "termcolor>=2.4.0",
+    "bitsandbytes>=0.42.0",
 ]
 
 [tool.black]
