swapping in steering-vectors lib

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "termcolor>=2.4.0",
     "bitsandbytes>=0.42.0",
     "nbdime>=4.0.1",
+    "steering-vectors>=0.3.0",
 ]
 
 [tool.black]
