Add `openai` as dependency, and translators notebook
This notebook has a few simple functions for translating inputs and
dataframes using gpt-4. You will need an openai API key to run the code
(obviously).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "bitsandbytes>=0.42.0",
     "nbdime>=4.0.1",
     "steering-vectors>=0.3.0",
+    "openai>=1.10.0",
 ]
 
 [tool.black]
