--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "mosestokenizer>=1.2.1",
     "gradio>=4.16.0",
     "simple-parsing>=0.1.5",
+    "torchmetrics>=1.3.0.post0",
 ]
 
 [tool.black]
