--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "gradio>=4.16.0",
     "simple-parsing>=0.1.5",
     "torchmetrics>=1.3.0.post0",
+    "umap-learn>=0.5.5",
 ]
 
 [tool.black]
