--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "simple-parsing>=0.1.5",
     "torchmetrics>=1.3.0.post0",
     "umap-learn>=0.5.5",
+    "google-cloud-translate>=3.15.1",
 ]
 
 [tool.black]
