--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,29 +11,29 @@ authors = [
 classifiers = ["Private :: Do Not Upload"]
 requires-python = ">=3.10,<4.0"
 dependencies = [
-    "pyrallis>=0.3.1",
-    "wandb>=0.16.0",
-    "transformers>=4.35.2",
-    "torch>=2.1.1",
-    "datasets>=2.15.0",
-    "numpy>=1.26.2",
-    "accelerate>=0.26.1",
-    "scikit-learn>=1.3.2",
-    "evaluate>=0.4.1",
-    "rouge-score>=0.1.2",
-    "termcolor>=2.4.0",
-    "bitsandbytes>=0.42.0",
-    "nbdime>=4.0.1",
-    "steering-vectors>=0.3.0",
-    "openai>=1.10.0",
-    "arrr>=1.0.4",
-    "spacy>=3.7.2",
-    "mosestokenizer>=1.2.1",
-    "gradio>=4.16.0",
-    "simple-parsing>=0.1.5",
-    "torchmetrics>=1.3.0.post0",
-    "umap-learn>=0.5.5",
-    "google-cloud-translate>=3.15.1",
+  "pyrallis>=0.3.1",
+  "wandb>=0.16.0",
+  "transformers>=4.35.2",
+  "torch>=2.1.1",
+  "datasets>=2.15.0",
+  "numpy>=1.26.2",
+  "accelerate>=0.26.1",
+  "scikit-learn>=1.3.2",
+  "evaluate>=0.4.1",
+  "rouge-score>=0.1.2",
+  "termcolor>=2.4.0",
+  "bitsandbytes>=0.42.0",
+  "nbdime>=4.0.1",
+  "steering-vectors>=0.3.0",
+  "openai>=1.10.0",
+  "arrr>=1.0.4",
+  "spacy>=3.7.2",
+  "mosestokenizer>=1.2.1",
+  "gradio>=4.16.0",
+  "simple-parsing>=0.1.5",
+  "torchmetrics>=1.3.0.post0",
+  "umap-learn>=0.5.5",
+  "google-cloud-translate>=3.15.1",
 ]
 
 [tool.black]
@@ -60,7 +60,7 @@ select = [
   "I",
 ]
 exclude = ["third_party", ".venv"]
-ignore = ["F841", "E501", "E741", "I001"]
+ignore = ["F841", "E501", "E741", "I001", "E731"]
 
 [tool.ruff.extend-per-file-ignores]
 "__init__.py" = ["F401", "F403", "E402"]
@@ -91,18 +91,18 @@ testpaths = ["tests"]
 
 [tool.pdm.dev-dependencies]
 dev = [
-    "notebook>=7.0.6",
-    "ipykernel>=6.27.1",
-    "matplotlib>=3.8.2",
-    "seaborn>=0.13.0",
-    "ffmpeg>=1.4",
-    "pytest>=7.4.3",
-    "black>=23.11.0",
-    "ruff>=0.1.6",
-    "pyright>=1.1.338",
-    "jupyter>=1.0.0",
-    "pre-commit>=3.5.0",
-    "syrupy>=4.6.0",
-    "pyright>=1.1.339",
-    "pytest-mock>=3.12.0",
+  "notebook>=7.0.6",
+  "ipykernel>=6.27.1",
+  "matplotlib>=3.8.2",
+  "seaborn>=0.13.0",
+  "ffmpeg>=1.4",
+  "pytest>=7.4.3",
+  "black>=23.11.0",
+  "ruff>=0.1.6",
+  "pyright>=1.1.338",
+  "jupyter>=1.0.0",
+  "pre-commit>=3.5.0",
+  "syrupy>=4.6.0",
+  "pyright>=1.1.339",
+  "pytest-mock>=3.12.0",
 ]
