--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,13 +72,16 @@ jobs:
         uses: python-semantic-release/python-semantic-release@v8.0.7
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Publish package distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        if: steps.release.outputs.released == 'true'
+
+      # TODO: publish to Pypi
+      # - name: Publish package distributions to PyPI
+      #   uses: pypa/gh-action-pypi-publish@release/v1
+      #   if: steps.release.outputs.released == 'true'
       - name: Publish package distributions to GitHub Releases
         uses: python-semantic-release/upload-to-gh-release@main
         if: steps.release.outputs.released == 'true'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      # build and deploy docs to gh-pages
+
+      # TODO: build and deploy docs to gh-pages
       # do this as part of the semantic release step to ensure version is bumped
