chore: add more configs

--- a/repepo/experiments/configs/machiavellianism.yaml
+++ b/repepo/experiments/configs/machiavellianism.yaml
@@ -1,7 +1,7 @@
 
 use_base_model: False
 model_size: 7b
-train_dataset_name: sycophancy_train
+train_dataset_name: machiavellianism
 train_split_name: train-dev
 
 formatter: llama-chat-formatter
@@ -9,7 +9,7 @@ aggregator: mean
 layers: [0, 15, 31]
 multipliers: [-1, -0.5, 0, 0.5, 1]
 
-test_dataset_name: sycophancy_train
+test_dataset_name: machiavellianism
 test_split_name: val-dev
 test_completion_template: "{prompt} My answer is: {response}"
 verbose: True
