--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,37 +14,42 @@ env:
   PYTHONUNBUFFERED: "1"
 
 jobs:
-  lint_and_test:
+  build:
     runs-on: ubuntu-latest
-
     permissions:
       contents: read
       packages: write
 
     strategy:
       matrix:
-        python-version: ["3.10"] # "3.11"
+        python-version: ["3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - name: Setup PDM
+        uses: pdm-project/setup-pdm@v4
         with:
+          cache: true
           python-version: ${{ matrix.python-version }}
-          cache: "pip"
-
-      - name: Install PDM
-        run: python -m pip install pdm
-
+      - name: Cache Huggingface assets
+        uses: actions/cache@v4
+        with:
+          key: huggingface-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/pyproject.toml') }}
+          path: ~/.cache/huggingface
+          restore-keys: |
+            huggingface-${{ runner.os }}-${{ matrix.python-version }}-
       - name: Install dependencies
         run: pdm install
-
-      - name: Lint
-        run: pdm run pre-commit run --all-files
-
-      - name: Type check
+      - name: check formatting
+        run: pdm run ruff format --check
+      - name: check linting
+        run: pdm run ruff check
+      - name: check types
         run: pdm run pyright
+      - name: build
+        run: pdm build
+      - name: test
+        run: pdm run pytest
 
       - name: Test
         env:
@@ -52,7 +57,7 @@ jobs:
         run: pdm run python -m pytest tests
 
   release:
-    needs: lint_and_test
+    needs: build
     permissions:
       contents: write
       id-token: write
