--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,32 +11,32 @@ authors = [
 classifiers = ["Private :: Do Not Upload"]
 requires-python = ">=3.10,<4.0"
 dependencies = [
-    "pyrallis>=0.3.1",
-    "wandb>=0.16.0",
-    "transformers==4.35.2",
-    "torch>=2.1.1",
-    "datasets>=2.15.0",
-    "numpy>=1.26.2",
-    "accelerate>=0.26.1",
-    "scikit-learn>=1.3.2",
-    "evaluate>=0.4.1",
-    "rouge-score>=0.1.2",
-    "termcolor>=2.4.0",
-    "bitsandbytes==0.42.0",
-    "nbdime>=4.0.1",
-    "steering-vectors>=0.10.0",
-    "openai>=1.10.0",
-    "arrr>=1.0.4",
-    "spacy>=3.7.2",
-    "mosestokenizer>=1.2.1",
-    "gradio>=4.16.0",
-    "simple-parsing>=0.1.5",
-    "torchmetrics>=1.3.0.post0",
-    "umap-learn>=0.5.5",
-    "google-cloud-translate>=3.15.1",
-    "statsmodels>=0.14.1",
-    "jaxtyping>=0.2.28",
-    "concept-erasure>=0.2.4",
+  "pyrallis>=0.3.1",
+  "wandb>=0.16.0",
+  "transformers==4.35.2",
+  "torch>=2.1.1",
+  "datasets>=2.15.0",
+  "numpy>=1.26.2",
+  "accelerate>=0.26.1",
+  "scikit-learn>=1.3.2",
+  "evaluate>=0.4.1",
+  "rouge-score>=0.1.2",
+  "termcolor>=2.4.0",
+  "bitsandbytes==0.42.0",
+  "nbdime>=4.0.1",
+  "steering-vectors>=0.10.0",
+  "openai>=1.10.0",
+  "arrr>=1.0.4",
+  "spacy>=3.7.2",
+  "mosestokenizer>=1.2.1",
+  "gradio>=4.16.0",
+  "simple-parsing>=0.1.5",
+  "torchmetrics>=1.3.0.post0",
+  "umap-learn>=0.5.5",
+  "google-cloud-translate>=3.15.1",
+  "statsmodels>=0.14.1",
+  "jaxtyping>=0.2.28",
+  "concept-erasure>=0.2.4",
 ]
 
 [tool.black]
@@ -63,7 +63,7 @@ lint.select = [
   "I",
 ]
 exclude = ["third_party", ".venv"]
-lint.ignore = ["F841", "E501", "E741", "I001", "E731"]
+lint.ignore = ["F841", "E501", "E741", "I001", "E731", "F722"]
 
 [tool.ruff.lint.extend-per-file-ignores]
 "__init__.py" = ["F401", "F403", "E402"]
