In distribution results (#168)
* add figures

* add figures

* wip: concept erasure

* update

* delete unused notebooks

* update plots

* concept erasure

* fix lint

* ignore type in random sv experiment

---------

Co-authored-by: Daniel CH Tan <dtch1997@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
   "evaluate>=0.4.1",
   "rouge-score>=0.1.2",
   "termcolor>=2.4.0",
+  "bitsandbytes==0.42.0",
   "nbdime>=4.0.1",
   "steering-vectors>=0.10.0",
   "openai>=1.10.0",
@@ -35,6 +36,7 @@ dependencies = [
   "google-cloud-translate>=3.15.1",
   "statsmodels>=0.14.1",
   "jaxtyping>=0.2.28",
+  "concept-erasure>=0.2.4",
 ]
 
 [tool.black]
@@ -61,7 +63,7 @@ lint.select = [
   "I",
 ]
 exclude = ["third_party", ".venv"]
-lint.ignore = ["F841", "E501", "E741", "I001", "E731"]
+lint.ignore = ["F841", "E501", "E741", "I001", "E731", "F722"]
 
 [tool.ruff.lint.extend-per-file-ignores]
 "__init__.py" = ["F401", "F403", "E402"]
