--- a/cluster/runner.yaml
+++ b/cluster/runner.yaml
@@ -4,11 +4,6 @@ metadata:
   name: {NAME}
   labels:
     kueue.x-k8s.io/queue-name: farai
-    wandb-group: {WANDB_RUN_GROUP}
-    wandb-project: {WANDB_PROJECT}
-    wandb-job-name: {WANDB_JOB_NAME}
-    wandb-entity: {WANDB_ENTITY}
-    launch-id: {LAUNCH_ID}
 spec:
   suspend: true
   backoffLimit: 0  # Never retry the pod on error
@@ -29,7 +24,7 @@ spec:
       priorityClassName: {PRIORITY}
       containers:
       - name: devbox-container
-        image: "ghcr.io/dtch1997/repepo:{CONTAINER_TAG}"
+        image: "{IMAGE}"
         imagePullPolicy: Always
         command:
           - bash
@@ -48,30 +43,6 @@ spec:
         env:
         - name: OMP_NUM_THREADS
           value: {OMP_NUM_THREADS}
-        - name: GIT_ASKPASS
-          value: "true"
-        - name: GITHUB_PAT
-          valueFrom:
-            secretKeyRef:
-              name: github-credentials
-              key: pat
-        - name: GIT_CONFIG_PARAMETERS
-          value: "'credential.https://github.com.username=$(GITHUB_PAT)'"
-        - name: WANDB_API_KEY
-          valueFrom:
-            secretKeyRef:
-              name: wandb
-              key: api-key
-        - name: WANDB_ENTITY
-          value: {WANDB_ENTITY}
-        - name: WANDB_JOB_NAME
-          value: {WANDB_JOB_NAME}
-        - name: WANDB_PROJECT
-          value: {WANDB_PROJECT}
-        - name: WANDB_RUN_GROUP
-          value: {WANDB_RUN_GROUP}
-        - name: WANDB_MODE
-          value: {WANDB_MODE}
         volumeMounts:
         - name: training
           mountPath: {TRAINING_MOUNT}
