--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "statsmodels>=0.14.1",
     "jaxtyping>=0.2.28",
     "concept-erasure>=0.2.4",
+    "plotly>=5.24.1",
 ]
 
 [tool.black]
