add script to launch llama3.1 70b experiments

--- a/cluster/runner.yaml
+++ b/cluster/runner.yaml
@@ -60,7 +60,7 @@ spec:
       volumes:
       - name: training
         persistentVolumeClaim:
-          claimName: repepo
+          claimName: az-repepo
       - name: hf-cache
         persistentVolumeClaim:
           claimName: repepo-local
