--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,3 +110,21 @@ dev = [
   "pyright>=1.1.339",
   "pytest-mock>=3.12.0",
 ]
+
+[project.optional-dependencies]
+dev = [
+  "notebook>=7.0.6",
+  "ipykernel>=6.27.1",
+  "matplotlib>=3.8.2",
+  "seaborn>=0.13.0",
+  "ffmpeg>=1.4",
+  "pytest>=7.4.3",
+  "black>=23.11.0",
+  "ruff>=0.1.6",
+  "pyright>=1.1.338",
+  "jupyter>=1.0.0",
+  "pre-commit>=3.5.0",
+  "syrupy>=4.6.0",
+  "pyright>=1.1.339",
+  "pytest-mock>=3.12.0",
+]
