--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,33 +11,34 @@ authors = [
 classifiers = ["Private :: Do Not Upload"]
 requires-python = ">=3.11,<4.0"
 dependencies = [
-  "pyrallis>=0.3.1",
-  "wandb>=0.16.0",
-  "transformers>=4.43.4",
-  "torch>=2.1.1",
-  "datasets>=2.15.0",
-  "numpy>=1.26.2",
-  "accelerate>=0.30.0",
-  "scikit-learn>=1.3.2",
-  "evaluate>=0.4.1",
-  "rouge-score>=0.1.2",
-  "termcolor>=2.4.0",
-  "bitsandbytes==0.42.0",
-  "nbdime>=4.0.1",
-  "steering-vectors>=0.12.1",
-  "openai>=1.10.0",
-  "arrr>=1.0.4",
-  "spacy>=3.7.2",
-  "mosestokenizer>=1.2.1",
-  "gradio>=4.16.0",
-  "simple-parsing>=0.1.5",
-  "torchmetrics>=1.3.0.post0",
-  "umap-learn>=0.5.5",
-  "google-cloud-translate>=3.15.1",
-  "statsmodels>=0.14.1",
-  "jaxtyping>=0.2.28",
-  "concept-erasure>=0.2.4",
-  "plotly>=5.24.1",
+    "pyrallis>=0.3.1",
+    "wandb>=0.16.0",
+    "transformers>=4.43.4",
+    "torch>=2.5.1",
+    "datasets>=2.15.0",
+    "numpy>=1.26.2",
+    "accelerate>=0.30.0",
+    "scikit-learn>=1.3.2",
+    "evaluate>=0.4.1",
+    "rouge-score>=0.1.2",
+    "termcolor>=2.4.0",
+    "bitsandbytes==0.42.0",
+    "nbdime>=4.0.1",
+    "steering-vectors>=0.12.1",
+    "openai>=1.10.0",
+    "arrr>=1.0.4",
+    "spacy>=3.7.2",
+    "mosestokenizer>=1.2.1",
+    "gradio>=4.16.0",
+    "simple-parsing>=0.1.5",
+    "torchmetrics>=1.3.0.post0",
+    "umap-learn>=0.5.5",
+    "google-cloud-translate>=3.15.1",
+    "statsmodels>=0.14.1",
+    "jaxtyping>=0.2.28",
+    "concept-erasure>=0.2.4",
+    "plotly>=5.24.1",
+    "llvmlite>=0.42.0",
 ]
 
 [tool.black]
@@ -120,7 +121,6 @@ dev = [
   "pytest>=7.4.3",
   "black>=23.11.0",
   "ruff>=0.1.6",
-  "pyright>=1.1.338",
   "jupyter>=1.0.0",
   "pre-commit>=3.5.0",
   "syrupy>=4.6.0",
